<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_photo"
            android:src="@android:drawable/ic_menu_camera"
            android:layout_width="150sp"
            android:layout_height="150sp" />

        <EditText
            android:id="@+id/edt_super_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:hint="@string/hint_name"
            android:layout_toEndOf="@id/iv_photo" />

        <EditText
            android:id="@+id/edt_alter_ego"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_super_name"
            android:hint="@string/hint_alter_ego"
            android:layout_toEndOf="@id/iv_photo" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/iv_photo"
            android:layout_marginVertical="10dp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/tv_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/separator"
            android:layout_marginVertical="20dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/tv_bio"
            android:textStyle="bold"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_bio"
            android:hint="@string/hint_bio"
            android:maxLines="3" />

        <TextView
            android:id="@+id/tv_power"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginVertical="20dp"
            android:layout_below="@+id/edt_bio"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/tv_power" />

        <RatingBar
            android:id="@+id/rb_power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_power"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rb_power"
            android:layout_marginVertical="20dp"
            android:layout_alignParentEnd="true"
            android:text="@string/tv_save" />

    </RelativeLayout>

</ScrollView>