<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="superHero"
            type="com.lizardoreyes.superheros.models.SuperHero" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:src="@drawable/no_photo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:text="@{superHero.name}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/tv_alter_ego" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:text="@{superHero.alter_ego}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/tv_bio" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:text="@{superHero.bio}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/tv_power" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="@{superHero.power}"
                android:isIndicator="true"
                android:layout_gravity="center" />

        </LinearLayout>

    </ScrollView>
</layout>